--- a/css/cart.css
+++ b/css/cart.css
@@ -1,14 +1,15 @@
-#cart-container{
+#cart-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.33rem;
+  gap: 1.6rem;
   justify-content: center;
   background-color: #141212;
-  width: 50%;
+  width: 88%;
+  max-width: 966px;
   margin: 0 auto;
-  padding: 3rem;
-  border-top: 0.03rem solid rgba(117, 184, 1, 0.6235294118);
-  border-bottom: 0.03rem solid rgba(117, 184, 1, 0.6235294118);
+  padding: 2rem;
+  border: 1px solid rgba(117, 184, 1, 0.6);
+  border-radius: 0.3rem;
 }
 
 .tarjeta-producto{
@@ -21,6 +22,7 @@
 
 .tarjeta-producto img{
   height: 100%;
+  object-fit: scale-down;
 }
 
 .tarjeta-producto h3{
